# Sakk

./: CMakeLists.txt  README.md  black_bishop.cpp  black_bishop.h  black_king.cpp  black_king.h  black_knight.cpp  black_knight.h  black_machine.cpp  black_machine.h  black_pawn.cpp  black_pawn.h  black_queen.cpp  black_queen.h  black_rook.cpp  black_rook.h  check.cpp  check.h  difficulty.cpp  difficulty.h  difficulty.ui  game.cpp  game.h  game.ui  humanormachine.cpp  humanormachine.h  humanormachine.ui  load.cpp  load.h  load.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  white_bishop.cpp  white_bishop.h  white_king.cpp  white_king.h  white_knight.cpp  white_knight.h  (+11 more)
